--- a/frontend/src/Styles/Layout.scss
+++ b/frontend/src/Styles/Layout.scss
@@ -1,19 +1,85 @@
+// Reset CSS
+* {box-sizing: border-box; line-height: 1;}
+body {margin: 0;}
+h1 {font-size: 2em; margin: 0; font-weight: 700;}
+p {margin: 0;}
+ul {list-style: none; margin: 0;}
+ul li {padding: 0;}
+button {border: 0; padding: 0; background: transparent;}
+input {padding: 0; }
+::placeholder {color: #bacce5; font-size: 16px;}
+::-moz-placeholder {color: #bacce5; font-size: 16px;}
+:-ms-input-placeholder {color: #bacce5; font-size: 16px;}
+
+html {font-size: 15px;}
+
+// Custom CSS
 @font-face {
   font-family: "Inter";
   src: url("./Fonts/Inter-VariableFont_slnt\,wght.ttf") format("ttf"),
 }
 
-html {
-  min-height: 100%;
-}
 
 body {
-  background: linear-gradient(180deg, #00123F 0%, #0D6EFD 100%);
-  min-height: 100%;
   color: white;
   font-family: "Inter", sans-serif;
+
+  &::before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: linear-gradient(180deg, #00123F 0%, #0D6EFD 100%);
+    z-index: -1;
+  }
+}
+
+main {
+  min-height: calc(100vh - 100px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 50px;
+
+  & > div {
+    width: 100%;
+  }
+}
+
+input {
+  border: 0; 
+  font-size: 16px;
+  border-radius: 30px;
+  height: 60px;
+  padding: 4px 30px 0;
+  width: 100%;
+  outline: none;
 }
 
 .modal-dialog {
   color: black;
+}
+
+.app {
+  display: block;
+  max-width: 480px;
+  margin: 0 auto;
+  min-height: 100vh;
+  padding: 100px 10px 0;
+}
+
+.tac {
+  text-align: center;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-justify-between {
+  justify-content: space-between;
 }
