--- a/frontend/src/Components/Common/WordsListItem.scss
+++ b/frontend/src/Components/Common/WordsListItem.scss
@@ -12,6 +12,13 @@ $yellow-dot-color: #FFB11B;
   height: 65px;
   align-items: center;
   padding: 0 20px;
+  position: relative;
+  transition: 0.5s;
+
+  &.deleted {
+    opacity: 0;
+    margin-top: -65px;
+  }
 
   .item-title {
     color: $accent-color;
