--- a/frontend/src/Components/Quiz/Quiz.scss
+++ b/frontend/src/Components/Quiz/Quiz.scss
@@ -12,6 +12,18 @@ $secondary-word-color: #4590FF;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
 
+  &.error {
+    animation: shake 0.5s;
+  }
+
+  @keyframes shake {
+    from {transform: translateX(0);}
+    25% {transform: translateX(5px);}
+    50% {transform: translateX(-5px);}
+    75% {transform: translateX(5px);}
+    to {transform: translateX(0);}
+  }
+
   &::before {
     content: "";
     display: block;
@@ -61,6 +73,12 @@ $secondary-word-color: #4590FF;
       stroke-dashoffset: calc(534 - (534 * var(--num)) / 100);
       transition: ease-in 1s;
     }
+
+    &.complete {
+      circle {
+        fill: $accent-color;
+      }
+    }
   }
 }
 
@@ -75,20 +93,32 @@ $secondary-word-color: #4590FF;
   align-items: center;
   font-size: 30px;
   font-weight: 700;
+  overflow: hidden;
+  border-radius: 50%;
 
   span.status-icon {
+    opacity: 0;
     border-radius: 50%;
     width: 120px;
     height: 120px;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    top: 20px;
+    left: 30px;
+    z-index: 2;
+    transition: 0.5s 0.1s;
 
     &.error {
-      background: $error-color
+      background: $error-color;
+      opacity: 1;
+      top: 30px;
     }
 
     &.success {
-      background: $succes-color
+      background: $succes-color;
+      opacity: 1;
+      top: 30px;
     }
   }
 }
@@ -203,7 +233,15 @@ $secondary-word-color: #4590FF;
   }
 }
 
-.quiz-result-wrap {
-  flex-direction: column;
-  align-items: center;
+.quiz-result {
+  font-size: 30px;
+  font-weight: 700;
+  
+  .result-score {
+    color: $secondary-color;
+  }
+
+  .result-text {
+    line-height: 40px;
+  }
 }
