--- a/frontend/src/Components/WordsSearchWrapper/WordsSearchWrapper.scss
+++ b/frontend/src/Components/WordsSearchWrapper/WordsSearchWrapper.scss
@@ -6,6 +6,7 @@
   height: 60px;
   border-radius: 30px;
   overflow: hidden;
+  margin-top: 40px;
 
   & + .validation-msg {
     margin: 15px 30px 0;
