--- a/frontend/src/Styles/Layout.scss
+++ b/frontend/src/Styles/Layout.scss
@@ -5,7 +5,7 @@
 body {margin: 0;}
 h1 {font-size: 2em; margin: 0; font-weight: 700;}
 p {margin: 0;}
-ul {list-style: none; margin: 0;}
+ul {list-style: none; margin: 0; padding: 0;}
 ul li {padding: 0;}
 button {border: 0; padding: 0; background: transparent; cursor: pointer;}
 input {padding: 0; }
