--- a/frontend/src/Components/WordsSearchWrapper/WordsSearchWrapper.scss
+++ b/frontend/src/Components/WordsSearchWrapper/WordsSearchWrapper.scss
@@ -91,6 +91,7 @@
   
   &:hover {
     .btn-error-msg {
+      transition-delay: 1s;
       opacity: 1;
       visibility: visible;
     }
@@ -108,6 +109,6 @@
     color: $dark-color;
     opacity: 0;
     visibility: hidden;
-    transition: opacity 1s, visibility 1s;
+    transition: opacity 0.5s, visibility 0.5s;
   }
 }
