--- a/frontend/src/Components/Common/Button.scss
+++ b/frontend/src/Components/Common/Button.scss
@@ -1,9 +1,8 @@
-@use 'sass:color';
+@use "sass:color";
 @use "../../Styles/Variables.scss" as *;
 
-
-$button-blue: #217BFF;
-$red-icon-color: #FA3E3A;
+$button-blue: #217bff;
+$red-icon-color: #fa3e3a;
 
 .button {
   transition: 0.2s ease-in-out;
@@ -57,6 +56,15 @@ $red-icon-color: #FA3E3A;
     padding: 0 0.4em;
   }
 
+  &--link {
+    color: #0d6efd;
+    font-size: 15px;
+
+    &:disabled {
+      opacity: 0.5;
+    }
+  }
+
   &--bubble {
     position: relative;
 
@@ -89,12 +97,12 @@ $red-icon-color: #FA3E3A;
   }
 
   &--close-btn {
-      justify-content: center;
-      align-items: center;
-      width: 46px;
-      height: 46px;
-      border-radius: 0 20px;
-      background-color: $secondary-color;
+    justify-content: center;
+    align-items: center;
+    width: 46px;
+    height: 46px;
+    border-radius: 0 20px;
+    background-color: $secondary-color;
   }
 
   &--circle {
@@ -116,7 +124,7 @@ $red-icon-color: #FA3E3A;
 
     &:disabled {
       background-color: $button-blue;
-      color: color.adjust($color:white, $alpha:-0.5);
+      color: color.adjust($color: white, $alpha: -0.5);
     }
   }
 
@@ -134,8 +142,8 @@ $red-icon-color: #FA3E3A;
 
     &:disabled {
       background-color: transparent;
-      color: color.adjust($color:white, $alpha:-0.5);
-      border-color: color.adjust($color:white, $alpha:-0.5);
+      color: color.adjust($color: white, $alpha: -0.5);
+      border-color: color.adjust($color: white, $alpha: -0.5);
     }
   }
 }
