--- a/frontend/src/Components/Common/Title.scss
+++ b/frontend/src/Components/Common/Title.scss
@@ -10,13 +10,21 @@
 
 .title {
   flex-basis: 100%;
+  min-height: 60px;
+}
 
-  h1 + * {
-    margin-top: 15px;
+.text-title {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 10px;
+
+  .button {
+    vertical-align: middle;
+    margin-left: 5px;
   }
 }
 
-.subtitle > span:not([class]) {
+.text-subtitle > span:not([class]) {
   display: inline-block;
   margin: 0 10px;
   color: $accent-color;
@@ -37,4 +45,3 @@
     font-weight: 500;
   }
 }
-
