--- a/frontend/src/Components/Header/Header.scss
+++ b/frontend/src/Components/Header/Header.scss
@@ -34,8 +34,7 @@ header {
 
   & svg {
     fill: white;
-
-  };
+  }
 
   @media (min-width: 480px) {
     height: 50px;
@@ -56,6 +55,10 @@ header {
   }
 }
 
+a.nav--logo {
+  cursor: pointer;
+}
+
 .nav--logo {
   display: block;
   color: white;
@@ -63,4 +66,5 @@ header {
   font-size: 2em;
   text-decoration: none;
   padding-top: 5px;
+  cursor: default;
 }
