--- a/frontend/src/Styles/Variables.scss
+++ b/frontend/src/Styles/Variables.scss
@@ -1,6 +1,8 @@
-$secondary-color: #FFDA1B;
-$accent-color: #0D6EFD;
-$dark-color: #0E151F;
-$error-color: #FA3E3A;
-$success-color: #00C738;
-$stroke-color: #C2D3E9;
+$secondary-color: #ffda1b;
+$accent-color: #0d6efd;
+$dark-color: #0e151f;
+$error-color: #fa3e3a;
+$success-color: #00c738;
+$stroke-color: #c2d3e9;
+$main-word-color: #ffda1b;
+$secondary-word-color: #4590ff;
