add speech recognition and plug for it

--- a/frontend/src/Components/WordsSearchWrapper/WordsSearchWrapper.scss
+++ b/frontend/src/Components/WordsSearchWrapper/WordsSearchWrapper.scss
@@ -90,6 +90,17 @@ form {
   }
 }
 
+.voice-btn {
+  &.active {
+    svg {
+      fill: #fa3e3a;
+    }
+    &:hover {
+      background-color: color.adjust($color: #fa3e3a, $alpha: -0.9);
+    }
+  }
+}
+
 .add-word-icon-wrap {
   position: relative;
 
